many row confirm and uncertain height middle

--- a/center-middle.html
+++ b/center-middle.html
@@ -12,11 +12,23 @@
             display: table-cell;
             border: 1px solid #5A6A94;
         }
+        span{
+            width:300px;
+            background-color: aqua;
+            line-height: 30px;
+            display: inline-block;
+        }
+        .text{
+            background-color: burlywood;
+            height:40px;
+            line-height: 40px;
+        }
     </style>
 </head>
 <body>
 <div class="box">
     <span>hello world!</span>
+    <span class="text">多行定高或多行不定高水平垂直具中</span>
 </div>
 </body>
 </html>
